[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemystp2.png" type="Texture" id=1]
[ext_resource path="res://src/actors/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/effects/Death.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/enemystpanimation.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 54.2572
height = 17.1853

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.83, 37.3637 )

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "heart"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 2.63902, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.5, 2.5 ), Vector2( 2, 2 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
self_modulate = Color( 1, 1, 1, 0 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="enemy" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 67.4721, -25.727 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8.23264, -0.150151 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -6.06858, -41.1867 )
scale = Vector2( 62.7114, 11.541 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0.321569, 0.603922, 0.964706, 1 )
position = Vector2( 0, -42 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 67.259, 10.5778 )
shape = SubResource( 2 )

[node name="EnemyDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "heart"
playback_process_mode = 0
anims/death = SubResource( 5 )
anims/heart = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
